<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Sync progress -->
    <LinearLayout
        android:id="@+id/sync_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/home_sync_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/sync_question_progress_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/select_country_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".SelectCountryActivity">

        <ImageView
            android:id="@+id/leader_board_btn"
            android:layout_width="75dp"
            android:layout_height="38dp"
            android:layout_marginRight="115dp"
            android:contentDescription="@string/leader_board_down_label"
            android:src="@drawable/leaderboard"
            android:layout_gravity="right" />

        <LinearLayout
            android:id="@+id/welcome_board"
            android:layout_height="90dp"
            android:layout_width="160dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/welcome_final_shadow_rope"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_gravity="center_vertical"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/welcome_user_name"
                android:layout_width="0dip"
                android:layout_weight="80"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="2"
                android:text="@string/welcome_anynomous_user"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold|italic"
                android:layout_marginTop="8dip"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/home_sync_question_btn"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:contentDescription="@string/action_sync_question"
            android:scaleType="centerInside"
            android:scaleX="1"
            android:scaleY="1"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_download_question"
            android:layout_gravity="right|center_vertical" />

        <ImageView
            android:id="@+id/location_1"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/brunei_location"
            android:visibility="invisible"
            android:adjustViewBounds="false" />

        <ImageView
            android:id="@+id/location_2"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/cambodia_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_3"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/indonesia_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_4"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/lao_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_5"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/malaysia_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_6"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/myanmar_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_7"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/philippines_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_8"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/singapore_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_9"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/thailand_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/location_10"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@drawable/location_final"
            android:contentDescription="@string/vietnam_location"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/help_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/help_content_desc"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="right|center_vertical"
            android:paddingBottom="3dp" />

        <fragment
            class="com.cse.p2a.aseangame.utils.ImageFragment"
            android:id="@+id/move_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/dark_hover_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />
    </FrameLayout>
</merge>