<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
    <!-- Login progress -->
    <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">
        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/login_progress_signing_in"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <!-- Home screen -->

    <LinearLayout
            android:id="@+id/home_form"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/home_header"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="30"
                android:orientation="horizontal"
                android:gravity="right">
            <ImageView
                    android:id="@+id/sound_control"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/sound_turn_on"
                    android:layout_gravity="top"
                    android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/main_select_game_mode"
                android:layout_width="240dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/login_form_final_shadow"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible" android:padding="3dp">
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="15"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="50"
                    android:orientation="vertical" android:layout_marginLeft="8dp" android:layout_marginRight="8dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@drawable/username_login_fixed_font"
                        android:contentDescription="@string/username_label"/>
                <EditText
                        android:id="@+id/login_username_txt"
                        android:layout_width="match_parent"
                        android:layout_height="28dip"
                        android:inputType="text"
                        android:singleLine="true"
                        android:keepScreenOn="true"
                        android:textColor="#000000" android:textSize="12sp"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText"
                        android:hint="@string/username_hint"/>
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="15dp"
                        android:background="@drawable/password_login_fixed_font"
                        android:contentDescription="@string/password_label"/>
                <EditText
                        android:id="@+id/login_password_txt"
                        android:layout_width="match_parent"
                        android:layout_height="28dip"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:selectAllOnFocus="true" android:textIsSelectable="false"
                        android:textColor="@color/black_overlay"
                        android:hint="@string/password_hint" android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_weight="18" android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="10dp" android:gravity="center">

                <ImageView
                        android:id="@+id/home_login_btn"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/login_label"
                        android:gravity="center_vertical|center_horizontal"
                        android:src="@drawable/login_button_final" android:paddingBottom="2dp"/>

                <ImageView
                        android:id="@+id/home_play_now_btn"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/play_action_title"
                        android:gravity="center_vertical|center_horizontal"
                        android:src="@drawable/play_now_final" android:layout_gravity="center_vertical"
                        android:paddingBottom="2dp"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/home_footer"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="50"
                android:orientation="horizontal"
                android:gravity="left">

        </LinearLayout>
        <ImageView
                android:id="@+id/pointer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="visible"
                android:contentDescription="@string/pointer_name" android:src="@drawable/pencil"/>

    </LinearLayout>
</merge>

